# personal-server

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  .releaserc.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Selfie.icns  cpu.Dockerfile  eslint.config.js  nvidia.Dockerfile  package-lock.json  package.json  pyproject.toml  selfie.spec  start.sh  tsconfig.base.json  tsconfig.json  vitest.config.d.ts  vitest.config.js  vitest.config.js.map  vitest.config.ts
.agents/skills/npm-library-setup/: SKILL.md
.agents/skills/typescript/: SKILL.md
.agents/skills/yeet/: SKILL.md
.claude/skills/: npm-library-setup  typescript  yeet
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/build-action/: action.yml
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  label.yml  package.yml  prerelease.yml  release-please.yml  release.yml  semantic-pull-request.yml  stale.yml
docker/: Dockerfile.arm64  Dockerfile.base  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.ui  build.sh
docs/: 260121-data-portability-protocol-spec.md  260127-personal-server-scaffold.md  260128-phase-0-implementation-plan.md  260128-phase-1-implementation-plan.md  260128-phase-2-implementation-plan.md  260128-phase-3-implementation-plan.md  260129-phase-4-implementation-plan.md  260130-server-signing-delegation.md  260202-package-renaming.md  260202-vana-storage-design.md  260203-sign-in-with-vana-implementation-plan.md  260204-frp-server-design.md  260209-desktop-app-connect-flow-changes.md  260209-opendatalabs-connect-sdk-scaffold.md  260212-personal-server-refactor.md  260213-dataconnect-integration-refactor.md  ralph-prompt.md  vana-storage-design.md
example-chats/: alice-whatsapp.txt
hooks/: hook-llama_cpp.py  hook-llama_index.py  hook-skl2onnx.py
scripts/: build-ui.sh  llama-cpp-python-cublas.sh  package-macos-app.sh  ralph.sh  register-builder.ts  register-server.ts  tsconfig.json  update-frpc.ts
selfie/: .env.example  __init__.py  __main__.py  config.ini.example  config.py  config_ini.py  gui.py  logging.py  utils.py
selfie-ui/: .env.development  .env.production  .prettierrc.json  package.json  tailwind.config.ts
selfie-ui/src/app/: config.ts  layout.tsx  page.tsx  providers.tsx  utils.ts
selfie/api/: __init__.py  completions.py  connectors.py  data_sources.py  document_connections.py  documents.py  index_documents.py  logs.py  models.py  settings.py
selfie/connectors/: README.md  base_connector.py  factory.py
selfie/connectors/chatgpt/: connector.py  documentation.md  schema.json  uischema.json
selfie/connectors/google_messages/: connector.py  documentation.md  schema.json
selfie/connectors/telegram/: connector.py  documentation.md  schema.json  uischema.json
selfie/connectors/text_files/: connector.py  documentation.md  (+2 more)
selfie/data_generators/: chat_training_data.py
selfie/database/: __init__.py  service.py
selfie/embeddings/: TxtaiVectorStore.py  __init__.py  base_scorer.py  document_types.py  importance_scorer.py  recency_scorer.py  relevance_scorer.py
selfie/text_generation/: __init__.py  default_completion.py  generation.py  retrieval_augmentation.py
selfie/types/: completion_requests.py  documents.py  share_gpt.py
selfie/utils/: data_structures.py  filesystem.py  models.py
tests/e2e/: data-ingest.e2e.test.ts  data-read.e2e.test.ts  delegation.e2e.test.ts  health.e2e.test.ts  tsconfig.json  vitest.config.ts
(+124 files in other folders)
